# DGCNN

./: .gitignore  DGCNN.ipynb  pyproject.toml
src/dgcnn/: data.py  main.py  model.py  util.py
