[project]
authors = [{name = "matthieuml", email = "merigotmatthieu@gmail.com"}]
dependencies = [ "numpy>=2.1.3,<3", "torch>=2.5.1,<3", "matplotlib>=3.9.2,<4", "scikit-learn>=1.5.2,<2", "ipykernel>=6.29.5,<7", "h5py>=3.12.1,<4"]
description = "Geometric Data Analysis Project on Dynamic Graph CNN for Learning on Point Clouds"
name = "DGCNN"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]

[tool.pixi.pypi-dependencies]
dgcnn = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.12,<3.13"
